Closed Bug 1468728 Opened 6 years ago Closed 5 years ago

White rectangles on page

Categories

(Core :: Web Painting, defect, P2)

60 Branch
x86_64
All
defect

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- wontfix
firefox60 --- wontfix
firefox61 --- wontfix
firefox62 --- wontfix
firefox63 --- wontfix
firefox64 --- wontfix
firefox65 --- wontfix
firefox66 --- wontfix
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- verified

People

(Reporter: victor.kovtun, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

Attached image 20180614_151207.jpg
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
Build ID: 20180607190419

Steps to reproduce:

1. Go to the site https://slidewiki.org/presentation/584-14/semantic-data-web-lecture/2038-5/15160-2/#/slide-15160-2.
2. Navigate through the slides using left and right buttons.


Actual results:

At some point various white rectangles cover the page. The rectangles disappear when the browser loses focus or when the user clicks somewhere on the screen (but it does not always help).

The issue is also reproduced in the safe mode and with hardware acceleration switched off.

The image was taken by a camera, because the artifacts disappear when performing screenshot.


Expected results:

There should be no blank rectangles.
This is pretty easy to reproduce with WR Disabled. This is not a WR bug.

I checked, and this reproduces with OMTP and/or retain-DL disabled.
Also the UA string from comment 0 says Firefox 60, in which WR cannot be enabled.
Component: Graphics: WebRender → Graphics
mozregression --good 2017-07-15 --bad 2017-09-15 --pref startup.homepage_welcome_url:'https://slidewiki.org/presentation/584-14/semantic-data-web-lecture/2038-5/15160-2/#/slide-15160-2'
> 6:32.55 INFO: Last good revision: 1704a6f949aff1d8101061645ede31ca96b572f8
> 6:32.55 INFO: First bad revision: 78676939447ffd59eb7a265fbd78a384d30136ec
> 6:32.55 INFO: Pushlog:
> https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=1704a6f949aff1d8101061645ede31ca96b572f8&tochange=78676939447ffd59eb7a265fbd78a384d30136ec

> 78676939447f	Matt Woodrow — Bug 1381753 - Recompute visible regions for ContainerLayers without intermediate surfaces when needed for invalidation. r=mstange
Blocks: 1381753
Status: UNCONFIRMED → NEW
Component: Graphics → Layout: Web Painting
Ever confirmed: true
Flags: needinfo?(matt.woodrow)
Keywords: regression
OS: Unspecified → Linux
Hardware: Unspecified → x86_64
Attached image bugAppearOnWin10.png
I can also reproduce the issue on Win10 Nightly62.0a1 x64.
OS: Linux → All
It seems likely that 63 is still affected though I was unable to reproduce the issue on MacOS 10.13.6.
I couldn't reproduce Bug 1484412 Comment 2 regression range on Ubuntu 18.04 and got the same one as in Comment 3.
Too late for a fix in 63. We could still take a patch for 65 or potentially for 64.
I encountered this on another site today:

STR:

1. Open https://auspost.com.au/sending.
2. Mouse over one of the menu items such as "Receiving" or "Sending" towards the top of the page.
3. Notice that the popup menu doesn't get painted entirely.

I could only narrow down the regression range to a day's worth of pushes, but I suspect it's the same as this bug.
Both Comment 0 and Comment 10 examples render correctly for me with WebRender enabled on latest Nightly 66 (Ubuntu 18.10).
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Priority: -- → P2
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8c1c9564e962
Don't try to maintain visible regions for Layers that might need to have a 3d representation. r=miko
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

I can confirm that the Comment 0 and Comment 10 test cases are now rendering correctly with latest Nightly 69.0a1 (2019-05-28) (new profile, basic compositor) on Ubuntu 19.04.

Status: RESOLVED → VERIFIED

Is this something we should consider backporting to Beta ahead of the next ESR or can it ride the 69 trains?

Comment on attachment 9063690 [details]
Bug 1468728 - Don't try to maintain visible regions for Layers that might need to have a 3d representation. r?mstange

Beta/Release Uplift Approval Request

  • User impact if declined: Incorrect invalidation in some cases with transform-style:preserve-3d.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just changes preserve-3d (relatively rare) specific bits of the invalidation code, so has limited potential to cause regressions.
  • String changes made/needed: None
Flags: needinfo?(matt.woodrow)
Attachment #9063690 - Flags: approval-mozilla-beta?

Comment on attachment 9063690 [details]
Bug 1468728 - Don't try to maintain visible regions for Layers that might need to have a 3d representation. r?mstange

I'd prefer to let this ride the trains

Attachment #9063690 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: