Bug 1468728 - Don't try to maintain visible regions for Layers that might need to have a 3d representation. r=miko

Differential Revision: https://phabricator.services.mozilla.com/D30452